# otus-cpp-basics

./: CMakeLists.txt  README.md  README.txt  check_value.cpp  check_value.h  fstream_file.cpp  fstream_file.h  high_scores.cpp  high_scores.txt  random_value.cpp  random_value.h  test.cpp
hello/: CMakeLists.txt  hello_world.cpp
str/: CMakeLists.txt  move_me_out.h
